--- a/server/server.csproj
+++ b/server/server.csproj
@@ -4,5 +4,9 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Emgu.CV" Version="4.3.0.3890" />
+    </ItemGroup>
+
 
 </Project>
